# scape_utils

./: .gitignore  README.md  playground.py  pyproject.toml
src/scape_util/: __init__.py
src/scape_utils/: __init__.py  utils.py  utils.pyi
tests/: sample.3DU16  test_header.py
