[project]
name = "scape-util"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Chung-Kuan Chen", email = "b97b01045@gmail.com" }]
dependencies = ["numpy>=2.0.0", "attrs>=23.2.0", "tifffile>=2024.7.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.5.1", "pytest>=8.2.2", "matplotlib>=3.9.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scape_util"]

[tool.ruff.lint]
extend-select = ["I001"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
