[project]
name = "scape-utils"
version = "0.1.0"
description = "A simple package to read SCAPE 3D image (3DU16)"
authors = [{ name = "Chung-Kuan Chen", email = "b97b01045@gmail.com" }]
dependencies = ["numpy<2.0.0", "attrs", "tifffile", "h5py"]
readme = "README.md"
requires-python = ">= 3.9"
urls = { github = "https://github.com/lycantrope/scape_utils" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "roifile[all]",
    "matplotlib",
    "scikit-image>=0.24.0",
    "ipython>=8.18.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scape_utils"]

[tool.ruff.lint]
extend-select = ["I001"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
